Implement API for notifications
