# app/lib/api/definitions/notification_subscription.py
@@ -1,0 +1,7 @@
+class NotificationSubscription:
+    def __init__(self):
+        self.zone_id = 0
+        self.type_id = 0
+        self.type = ''
+        self.enabled = False
+        self.data = None
