# app/lib/api/definitions/notification_type.py
@@ -1,0 +1,5 @@
+class NotificationType:
+    def __init__(self):
+        self.id = 0
+        self.name = ''
+        self.enabled = False
